<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_profile_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_profile_settings" />

        <item
            android:id="@+id/menu_add_equipment"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_add_equipment" />

        <item
            android:id="@+id/menu_about_application"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_about_application" />

        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/menu_change_wifi"
            android:icon="@drawable/ic_wifi_black_24dp"
            android:title="@string/menu_change_wifi" />

        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_exit" />
    </group>
</menu>