<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/white"
              android:orientation="vertical"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/input_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_top_margin"
        android:hint="@string/password"
        android:inputType="numberPassword"
        style="@style/WhiteEditText"/>

    <EditText
        android:id="@+id/et_reset_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:inputType="numberPassword"
        style="@style/WhiteEditText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/low_text"
        android:textColor="@color/error"
        android:visibility="gone"
        android:text="@string/passwords_not_equals"
        android:id="@+id/textView2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/low"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_send_new_pass"
            android:text="@string/next"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            style="@style/SendButton"/>

    </RelativeLayout>

</LinearLayout>