<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_auth"
    android:background="@drawable/splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AuthActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_et_auth"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            style="@style/WhiteEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_et_auth"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/WhiteEditText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/low_text"
            android:textColor="@color/error"
            android:text="@string/incorrect_auth_data"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/low"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <Button
                    android:text="@string/registration"
                    android:layout_marginStart="@dimen/zero"
                    android:id="@+id/btn_registration"
                    style="@style/SendButton"/>

                <Button
                    android:text="@string/sign_in"
                    android:id="@+id/btn_sign_in"
                    android:layout_marginEnd="@dimen/zero"
                    android:layout_marginStart="@dimen/zero"
                    style="@style/SendButton"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/low_text"
            android:textColor="@color/white"
            android:paddingStart="@dimen/low"
            android:paddingEnd="@dimen/low"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/forgot_password"/>

    </LinearLayout>

</RelativeLayout>
