<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
             android:id="@+id/toolbar_addition_equipment"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/focus"
                android:gravity="center"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_add_black_24dp"
                    android:gravity="center"
                    android:text="@string/addition_image"/>

            </LinearLayout>

            <EditText
                android:id="@+id/tv_profile_surname"
                android:hint="@string/equipment_name"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_top_margin"
                style="@style/WhiteEditText"/>

            <EditText
                android:id="@+id/tv_profile_name"
                android:hint="@string/pin_code"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteEditText"/>

            <EditText
                android:id="@+id/tv_profile_patronymic"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serial_number"
                style="@style/WhiteEditText"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/low"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <Button
                    android:text="@string/save"
                    android:id="@+id/btn_send_registration_data"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    style="@style/SendButton"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
