<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
             android:id="@+id/toolbar_edit_equipment"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/focus"
                android:gravity="center"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_add_black_24dp"
                    android:gravity="center"
                    android:text="@string/addition_image"/>

            </LinearLayout>

            <EditText
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_top_margin"
                style="@style/WhiteEditText"/>


            <EditText
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteEditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/tv_horizontal_edit_equipment"
                android:paddingEnd="@dimen/tv_horizontal_edit_equipment"
                android:text="@string/equipment_name"/>

            <!--<RelativeLayout
                android:id="@+id/rlSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium"
                style="@style/EditTextEquipmentEdit">

                <EditText
                    android:id="@+id/txtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/imgSearch"
                    android:background="@color/white"
                    android:textCursorDrawable="@drawable/shape_et_cursor"/>

                <ImageView
                    android:id="@+id/imgSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_edit_black_36dp" />

            </RelativeLayout>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/tv_horizontal_edit_equipment"
                android:paddingEnd="@dimen/tv_horizontal_edit_equipment"
                android:text="@string/country_code"/>

            <EditText
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteEditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/tv_horizontal_edit_equipment"
                android:paddingEnd="@dimen/tv_horizontal_edit_equipment"
                android:text="@string/locality"/>

            <EditText
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteEditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/tv_horizontal_edit_equipment"
                android:paddingEnd="@dimen/tv_horizontal_edit_equipment"
                android:text="@string/address"/>

            <EditText
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteEditText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/tv_horizontal_edit_equipment"
                android:paddingEnd="@dimen/tv_horizontal_edit_equipment"
                android:text="@string/coordinates_gps"/>

            <EditText
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteEditText"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/low"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <Button
                    android:text="@string/save"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    style="@style/SendButton"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
